# projectile-physics-simulator

./: .gitignore  README.md  conftest.py  projectile_simulator.py  pyproject.toml
.github/workflows/: ci.yml
src/projectile_simulator/: __init__.py  __main__.py  cli.py  physics.py  visualizer.py
src/projectile_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_main.py  test_physics.py  test_visualizer.py
